--- a/cv/index.html
+++ b/cv/index.html
@@ -118,7 +118,7 @@
                       <strong class="text-uppercase">Age:</strong>
                     </div>
                     <div class="col-sm-8">
-                      <span id="year-of-birth"></span>
+                      <span id="year-of-birth">Calculating...</span>
                     </div>
                   </div>
                   <div class="row mt-3">
