--- a/cv/index.html
+++ b/cv/index.html
@@ -87,7 +87,7 @@
                     title="My Stack Overflow Account">
                     <i class="fa fa-stack-overflow"></i>
                   </a>
-                  <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/aryan-ebrahimpour-b38975144/" rel="tooltip"
+                  <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/0xaryan/" rel="tooltip"
                     title="My Linkedin Account">
                     <i class="fa fa-linkedin"></i>
                   </a>
@@ -1061,7 +1061,7 @@
         <a class="cc-stack-overflow btn btn-link" href="https://stackoverflow.com/users/7825034/aryan?tab=profile">
           <i class="fa fa-stack-overflow fa-2x " aria-hidden="true"></i>
         </a>
-        <a class="cc-linkedin btn btn-link" href="https://www.linkedin.com/in/aryan-ebrahimpour-b38975144/">
+        <a class="cc-linkedin btn btn-link" href="https://www.linkedin.com/in/0xaryan/">
             <i class="fa fa-linkedin fa-2x " aria-hidden="true"></i>
           </a>
       </div>
