Added university grades

--- a/cv/index.html
+++ b/cv/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="h2 title">Aryan Ebrahimpour</div>
                 <p class="category text-white">Desktop and Web Developer, Designer</p>
-                <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
+                <a class="btn btn-primary smooth-scroll mr-2" href="https://0xaryan.github.io/cv/media/University Grades.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download University Grades</a>
                 <a class="btn btn-primary" target="_blank" href="https://0xaryan.github.io/cv/media/cv.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
               </div>
             </div>
