--- a/cv/index.html
+++ b/cv/index.html
@@ -682,7 +682,7 @@
                         </a>
                       </div>
                       <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                        <a target="_blank" href="https://github.com/0xaryan/GuilanDataStructures">
+                        <a target="_blank" href="https://github.com/0xaryan/Ocisp">
                           <figure class="cc-effect">
                             <img src="images/project-6.jpg" alt="Image" />
                             <figcaption>
