Guilan data structure url fixed

--- a/cv/index.html
+++ b/cv/index.html
@@ -647,7 +647,7 @@
                         </a>
                       </div>
                       <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                        <a target="_blank" href="https://0xaryan.github.io/GuilanDataStructures">
+                        <a target="_blank" href="https://github.com/0xaryan/GuilanDataStructures">
                           <figure class="cc-effect">
                             <img src="images/project-7.jpg" alt="Image" />
                             <figcaption>
