--- a/cv/index.html
+++ b/cv/index.html
@@ -868,7 +868,7 @@
                     <div class="h5">Bachelor of Computer Engineering</div>
                     <p class="category">Guilan University</p>
                     <p>
-                        In Guilan University, I've started to convey other students my knowledge about programming and web design from the beginning of entering university. After that, I've become a member of the academic forum and participated in ACM programming contest with the result of honorable mention. I had a lot of in-class presentations about Agile software methodologies, the difference between Windows and Linux OS processes and threads, SQL Server and Entity Framework related presentations, Economical and social topics like Human Development Index, Informal Sector, etc. 
+                        In Guilan University, I've started to convey other students my knowledge about programming and web design from the beginning of entering university. After that, I've become a member of the academic forum and participated in ACM programming contest with the result of honorable mention. I had a lot of in-class presentations about Agile software methodologies, DevOps, Refactoring and Bad smells in code, the difference between Windows and Linux OS processes and threads, SQL Server and Entity Framework related presentations, Economical and social topics like Human Development Index, Informal Sector, etc. 
                     </p>
                   </div>
                 </div>
