Added Interaction to WPF Modal

--- a/cv/index.html
+++ b/cv/index.html
@@ -1196,6 +1196,7 @@
               <li>Dependency Object and Properties</li>
               <li>Model-View-ViewModel Pattern</li>
               <li>WPF Controls</li>
+              <li>Custom Behaviors and other <i>Microsoft.Expression.Interaction</i> features</li>
               <li>Creating Custom User Controls</li>
               <li>Events</li>
               <li>Data Binding</li>
