Change size of WPF and C# modal to large

--- a/cv/index.html
+++ b/cv/index.html
@@ -1138,7 +1138,7 @@
 
     <!-- C# Modal -->
     <div class="modal fade" id="CSharpModal" tabindex="-1" role="dialog" aria-labelledby="CSharpModal" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="CSharpModalTitle">C#</h5>
@@ -1180,7 +1180,7 @@
 
     <!-- WPF Modal -->
     <div class="modal fade" id="WPFModal" tabindex="-1" role="dialog" aria-labelledby="WPFModal" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="WPFTitle">WPF</h5>
