--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
 
 <!-- Js -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> <!-- jQuery Core -->
+<script src="assets/js/jquery.min.js"></script> <!-- jQuery Core -->
 <script src="assets/js/bootstrap.min.js"></script> <!-- Bootstrap -->
 <script src="assets/js/supersized.3.2.7.min.js"></script> <!-- Slider -->
 <script src="assets/js/waypoints.js"></script> <!-- WayPoints -->
