Edit writing mistakes

--- a/cv/index.html
+++ b/cv/index.html
@@ -973,7 +973,7 @@
                     <p class="category">Eshragh High School</p>
                     <p>
                       In years of high school, I've studied Discrete mathematics, Differential mathematics, Chemistry, Static and Dynamic Physics,
-                      Geometry, Statistics and Probability and Persian literature.
+                      Geometry, Statistics, Probability and Persian literature.
                     </p>
                   </div>
                 </div>
