--- a/cv/index.html
+++ b/cv/index.html
@@ -176,7 +176,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="progress-container progress-primary">
-                    <span class="progress-badge">WPF</span>
+                    <span class="progress-badge">WPF / UWP</span>
                     <div class="progress">
                       <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar"
                         aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
@@ -359,12 +359,12 @@
                 </div>
                 <div class="col-md-6">
                   <div class="progress-container progress-primary">
-                    <span class="progress-badge">ATMEL / Arduino / RaspberryPi Development (IoT)</span>
+                    <span class="progress-badge">IoT / Win10 IoT Core / RaspberryPi / Arduino</span>
                     <div class="progress">
                       <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar"
                         aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
                       <span class="progress-value">
-                        <a href="#" data-toggle="modal" data-target="#FamiliarModal" class="badge badge-warning">Familiar</a>
+                        <a href="#" data-toggle="modal" data-target="#ExpModal" class="badge badge-info">Experienced</a>
                       </span>
                     </div>
                   </div>
