--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <link href="assets/css/supersized.shutter.css" rel="stylesheet">
 
 <!-- Google Font -->
-<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900' rel='stylesheet' type='text/css'>
 
 <!-- Fav Icon -->
 <link rel="shortcut icon" href="#">
@@ -126,7 +126,7 @@
             <div class="span12">
                 <div class="title-page">
                     <h2 class="title">My Profiles</h2>
-                    <h3 class="title-description">Check Out My Projects on <a target="_blank" href="https://github.com/0xaryan">Github</a>.</h3>
+                    <h3 class="title-description">Check Out My Projects on <a target="_blank" href="https://github.com/0xaryan">Github</a> and full CV <a href="cv/">here</a>.</h3>
                 </div>
             </div>
         </div>
@@ -279,7 +279,7 @@
         <div class="span12">
             <div class="title-page">
                 <h2 class="title">About Me</h2>
-                <h3 class="title-description">You wanna know a little bit more? I'll keep it short.</h3>
+                <h3 class="title-description">You wanna know more? I'll keep it short.</h3>
             </div>
         </div>
     </div>
