--- a/cv/index.html
+++ b/cv/index.html
@@ -184,7 +184,7 @@
 
                       <div id="collapse-cs" class="collapse show" aria-labelledby="heading-cs" data-parent="#accordion-cs">
                         <div class="card-body">
-                          I know almost all C# language features like
+                          I know almost all C# language features like:
                           <ul>
                             <li>All C# Keywords and Preprocessor Directives</li>
                             <li>Delegates, Event system</li>
