--- a/cv/index.html
+++ b/cv/index.html
@@ -201,7 +201,7 @@
                             <li>Socket Programming, Networking, MultiThreading...</li>
                             <li>And many more...</li>
                           </ul>
-                          I have more than 3 years of professional experience in C# and .NET, worked on lots of Desktop projects. Also have experice
+                          I have more than 3 years of professional experience in C# and .NET, worked on lots of Desktop projects. Also have experience 
                           in Web Development, Game Programming and IoT development with C#.<br><br>
                           Related Tags: .NET Framework, .NET Core, .NET Standard, CLR, CIL, Mono, ...
                         </div>
@@ -345,13 +345,13 @@
                       <div id="collapse-xaml" class="collapse" aria-labelledby="heading-xaml" data-parent="#accordion-xaml">
                         <div class="card-body">
                           XAML or Extensible Application Markup Language is a great markup language with lots of useful features
-                          that can be used in WPF, UWP, Xamarin, Unity and a lot of other type of apps and games.
+                          that can be used in WPF, UWP, Xamarin, Unity and a lot of other types of apps and games.
                           <br/>I can:
                           <ul>
                             <li>Design custom controls with custom behaviors</li>
                             <li>Create custom MarkupExtensions</li>
                             <li>Create custom Attached Properties</li>
-                            <li>Create responsive user interface</li>
+                            <li>Create responsive user interfaces</li>
                             <li>And many more...</li>
                           </ul>
                         </div>
@@ -373,7 +373,7 @@
                       <div id="collapse-asp" class="collapse" aria-labelledby="heading-asp" data-parent="#accordion-asp">
                         <div class="card-body">
                           ASP.NET MVC Core + Entity Framework = Monster<br/>
-                          I've watched a full professional video tutorial for ASP.NET MVC and done some projects with it.
+                          I've watched a fully professional video tutorial for ASP.NET MVC and done some projects with it.
                           ASP.NET is currently the only web framework that I'm experienced in. <br/>
                         </div>
                       </div>
@@ -396,7 +396,7 @@
 
                       <div id="collapse-js" class="collapse" aria-labelledby="heading-js" data-parent="#accordion-js">
                         <div class="card-body">
-                          I'm experienced in JS and jQuery. You can't write client-side web apps or web extensions without using these languages.
+                          I'm experienced in JS and jQuery. You can't write client-side web apps or web extensions without using this language.
                         </div>
                       </div>
                     </div>
@@ -438,7 +438,7 @@
 
                       <div id="collapse-py" class="collapse" aria-labelledby="heading-py" data-parent="#accordion-py">
                         <div class="card-body">
-                          I'm familiar with Python. I don't know much about it's libraries yet.
+                          I'm familiar with Python. I don't know much about its libraries yet.
                         </div>
                       </div>
                     </div>
@@ -540,7 +540,7 @@
                       <div id="collapse-iot" class="collapse" aria-labelledby="heading-iot" data-parent="#accordion-iot">
                         <div class="card-body">
                           I am a big fan of Electronics and DIY. I've done the final project of my university's CAD course with Windows IoT core + Xamarin + VHDL. A great 
-                          blend! Result was a ping pong game that can be controlled with a smartphone, sending data to a RaspberryPi with Windows and a FPGA which runs the game that is written in VHDL.
+                          blend! The result was a ping pong game that can be controlled with a smartphone, sending data to a RaspberryPi with Windows and an FPGA which runs the game that is written in VHDL.
                         </div>
                       </div>
                     </div>
@@ -561,7 +561,7 @@
 
                       <div id="collapse-vhdl" class="collapse" aria-labelledby="heading-vhdl" data-parent="#accordion-vhdl">
                         <div class="card-body">
-                          As I mentioned in IoT section, I've written a complete ping-pong game in VHDL, with help of other technologies like Xamarin, Windows IoT core and RaspberryPi.
+                          As I mentioned in IoT section, I've written a complete ping-pong game in VHDL, with help of other technologies like Xamarin, Windows IoT core, and RaspberryPi.
                         </div>
                       </div>
                     </div>
@@ -581,7 +581,7 @@
                       <div id="collapse-java" class="collapse" aria-labelledby="heading-java" data-parent="#accordion-java">
                         <div class="card-body">
                           I'm experienced in Threading, Socket Programming and Desktop Programming with Java (JavaFX).
-                          Almost in all of our university projects, we were forced to use Java, therefore all my AI projects, PL design projects and Advanced Programming course projects are written in java.
+                          Almost in all of our university projects, we were forced to use Java, therefore all my AI projects, PL design projects and Advanced Programming course projects are written in Java.
                           I'm not a fan of it tho!
                         </div>
                       </div>
@@ -604,7 +604,7 @@
 
                       <div id="collapse-game" class="collapse" aria-labelledby="heading-game" data-parent="#accordion-game">
                         <div class="card-body">
-                          I'm really interested in Game Development. I'm familiar with CryEngine, Unity and Xenko game engines editors.
+                          I'm really interested in Game Development. I'm familiar with CryEngine, Unity, and Xenko game engines editors.
                           I also have <a href="https://github.com/xenko3d/xenko/pull/83" target="_blank">a merged PR to Xenko Game Engine</a> and created a new dark theme for it (+ Icon theming features).
                         </div>
                       </div>
@@ -635,7 +635,7 @@
 
                       <div id="collapse-ui-ux" class="collapse" aria-labelledby="heading-ui-ux" data-parent="#accordion-ui-ux">
                         <div class="card-body">
-                          Creating charming user intefaces were always a hobby for me. I love blending Arts with Computers!
+                          Creating charming user interfaces were always a hobby for me. I love blending Arts with Computers!
                         </div>
                       </div>
                     </div>
@@ -656,7 +656,7 @@
                       <div id="collapse-algorithm" class="collapse" aria-labelledby="heading-algorithm" data-parent="#accordion-algorithm">
                         <div class="card-body">
                           Design and make use of better algorithms in factors like time and space were always my concern.
-                          I always try to learn and user better algorithms when possible.
+                          I always try to learn and use better algorithms when possible.
                         </div>
                       </div>
                     </div>
@@ -697,7 +697,7 @@
 
                       <div id="collapse-linux" class="collapse" aria-labelledby="heading-linux" data-parent="#accordion-linux">
                         <div class="card-body">
-                          Linux is a great operating system with great community and an open door to free world. 
+                          Linux is a great operating system with a great community and an open door to the free world. 
                           Although my primary operating system is Windows, I still use WSL and bash on Windows.
                         </div>
                       </div>
@@ -780,7 +780,7 @@
 
                       <div id="collapse-iis" class="collapse" aria-labelledby="heading-iis" data-parent="#accordion-iis">
                         <div class="card-body">
-                          I have a basic knowledge about IIS, but it do the job for now.
+                          I have a basic knowledge about IIS, but it does the job for now.
                         </div>
                       </div>
                     </div>
@@ -823,7 +823,7 @@
 
                       <div id="collapse-network" class="collapse" aria-labelledby="heading-network" data-parent="#accordion-network">
                         <div class="card-body">
-                          I'm familiar with some of network tools like Wireshark, GNS3 and Cicso Packet Tracer.
+                          I'm familiar with some of the network tools like Wireshark, GNS3 and Cisco Packet Tracer.
                         </div>
                       </div>
                     </div>
