fix grammer mistake

--- a/cv/index.html
+++ b/cv/index.html
@@ -323,7 +323,7 @@
 
                       <div id="collapse-css" class="collapse" aria-labelledby="heading-css" data-parent="#accordion-css">
                         <div class="card-body">
-                          I'm experienced in CSS 3 and it's features like keyframe animations, effects, etc.
+                          I'm experienced in CSS 3 and its features like keyframe animations, effects, etc.
                         </div>
                       </div>
                     </div>
