--- a/cv/index.html
+++ b/cv/index.html
@@ -396,7 +396,7 @@
 
                       <div id="collapse-js" class="collapse" aria-labelledby="heading-js" data-parent="#accordion-js">
                         <div class="card-body">
-                          I'm experienced in JS and jQuery. You can't write client-side web apps or web extensions without using this language.
+                          I'm experienced in JS and jQuery. I've used it to write client-side web apps and web extensions.
                         </div>
                       </div>
                     </div>
