--- a/cv/index.html
+++ b/cv/index.html
@@ -761,7 +761,7 @@
 
                       <div id="collapse-office" class="collapse" aria-labelledby="heading-office" data-parent="#accordion-office">
                         <div class="card-body">
-                          I'm experiensed in Word, Excell, Power Point, One Note and Microsoft Power BI.
+                          I'm experienced in Word, Excell, Power Point, One Note and Microsoft Power BI.
                         </div>
                       </div>
                     </div>
