--- a/cv/index.html
+++ b/cv/index.html
@@ -106,7 +106,7 @@
               <div class="col-lg-6 col-md-12">
                 <div class="card-body">
                   <div class="h4 mt-0 title">About</div>
-                  <p>Hello! I am Aryan Ebrahimpour. Software developer and designer.</p>
+                  <p>Hello! I am Aryan Ebrahimpour. Software Engineer and Designer.</p>
                   <p>
                     I have commenced programming since middle school and I was interested in this field. Since that time, I've started developing
                     applications and writing articles in my weblog. I read software and hardware articles and follow Programming
