--- a/cv/index.html
+++ b/cv/index.html
@@ -540,7 +540,7 @@
                       <div id="collapse-iot" class="collapse" aria-labelledby="heading-iot" data-parent="#accordion-iot">
                         <div class="card-body">
                           I am a big fan of Electronics and DIY. I've done the final project of my university's CAD course with Windows IoT core + Xamarin + VHDL. A great 
-                          blend! The result was a ping pong game that can be controlled with a smartphone, sending data to a RaspberryPi with Windows and an FPGA which runs the game that is written in VHDL.
+                          blend! The result was a <a target="_blank" href="https://github.com/0xaryan/PingPongGame_CAD_VGA">ping pong game</a> that can be controlled with a smartphone, sending data to a RaspberryPi with Windows and an FPGA which runs the game that is written in VHDL.
                         </div>
                       </div>
                     </div>
@@ -561,7 +561,7 @@
 
                       <div id="collapse-vhdl" class="collapse" aria-labelledby="heading-vhdl" data-parent="#accordion-vhdl">
                         <div class="card-body">
-                          As I mentioned in IoT section, I've written a complete ping-pong game in VHDL, with help of other technologies like Xamarin, Windows IoT core, and RaspberryPi.
+                          As I mentioned in IoT section, I've written a complete <a target="_blank" href="https://github.com/0xaryan/PingPongGame_CAD_VGA">ping-pong game in VHDL</a>, with help of other technologies like Xamarin, Windows IoT core, and RaspberryPi.
                         </div>
                       </div>
                     </div>
@@ -1385,7 +1385,7 @@
                             <p class="mb-0">
                               <strong>Address </strong>
                             </p>
-                            <p class="pb-2">Room 203, Block 3, Guilan University Dormitory, Rasht, Guilan, Iran</p>
+                            <p class="pb-2">Rasht, Guilan, Iran</p>
                             <p class="mb-0">
                               <strong>Phone</strong>
                             </p>
