--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@
   
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
-  <link href="styles/main.css" rel="stylesheet">
+  <link href="styles/main.css?guid=d24d2179-37d6-42c1-bd39-2b4e2a2b9313" rel="stylesheet">
 </head>
 
 <body id="top">
