--- a/cv/index.html
+++ b/cv/index.html
@@ -478,7 +478,7 @@
 
                       <div id="collapse-cpp" class="collapse" aria-labelledby="heading-cpp" data-parent="#accordion-cpp">
                         <div class="card-body">
-                          I'm familiar with C++. I'm also experienced in some of POSIX APIs (processes, fork features, p_threads, ...). I also have a GUI Tic-Tac-Toe game project 
+                          I'm familiar with C++. I'm also experienced in POSIX APIs (processes, fork features, p_threads, ...). I also have a <a href="https://github.com/0xaryan/doozGame" target="_blank">GUI Tic-Tac-Toe game</a> project 
                           fully written in C++ CLR.
                         </div>
                       </div>
