--- a/cv/index.html
+++ b/cv/index.html
@@ -842,17 +842,17 @@
             <div class="card-body">
               <div class="row">
                   <div class="col-md-6">
-                      <div class="accordion" id="accordion-ahk">
+                      <div class="accordion" id="accordion-presentation">
                         <div class="card">
-                          <div class="card-header" id="heading-ahk">
+                          <div class="card-header" id="heading-presentation">
                             <h5 class="mb-0">
-                              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-ahk" aria-expanded="true" aria-controls="collapse-ahk">
+                              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-presentation" aria-expanded="true" aria-controls="collapse-presentation">
                                 Presentation
                               </button>
                             </h5>
                           </div>
     
-                          <div id="collapse-ahk" class="collapse show" aria-labelledby="heading-ahk" data-parent="#accordion-ahk">
+                          <div id="collapse-presentation" class="collapse show" aria-labelledby="heading-presentation" data-parent="#accordion-presentation">
                             <div class="card-body">
                               I can give presentations about different topics. Here is <a href="https://github.com/0xaryan/Presentation" target="_blank">a list of Documents and Slides</a> that I've created overtime or pressented about.
                             </div>
