--- a/cv/index.html
+++ b/cv/index.html
@@ -854,7 +854,7 @@
     
                           <div id="collapse-presentation" class="collapse show" aria-labelledby="heading-presentation" data-parent="#accordion-presentation">
                             <div class="card-body">
-                              I can give presentations about different topics. Here is <a href="https://github.com/0xaryan/Presentation" target="_blank">a list of Documents and Slides</a> that I've created overtime or pressented about.
+                              I can give presentations about different topics. Here is <a href="https://github.com/0xaryan/Presentation" target="_blank">a list of Documents and Slides</a> that I've created overtime and pressented about.
                             </div>
                           </div>
                         </div>
