--- a/cv/index.html
+++ b/cv/index.html
@@ -12,6 +12,8 @@
   
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
+  <link href="css/main.css" rel="stylesheet" />
+
   <link href="styles/main.css?guid=d24d2179-37d6-42c1-bd39-2b4e2a2b9313" rel="stylesheet">
 </head>
 
@@ -513,7 +515,7 @@
                       <div class="card-header" id="heading-webext">
                         <h5 class="mb-0">
                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-webext" aria-expanded="true" aria-controls="collapse-webext">
-                            Browser Extension Development (WebExtension)
+                            Browser Extension Development
                           </button>
                         </h5>
                       </div>
@@ -532,7 +534,7 @@
                       <div class="card-header" id="heading-iot">
                         <h5 class="mb-0">
                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-iot" aria-expanded="true" aria-controls="collapse-iot">
-                            IoT / Win10 IoT Core / RaspberryPi / Arduino
+                            IoT / RaspPi / Arduino
                           </button>
                         </h5>
                       </div>
@@ -541,6 +543,8 @@
                         <div class="card-body">
                           I am a big fan of Electronics and DIY. I've done the final project of my university's CAD course with Windows IoT core + Xamarin + VHDL. A great 
                           blend! The result was a <a target="_blank" href="https://github.com/0xaryan/PingPongGame_CAD_VGA">ping pong game</a> that can be controlled with a smartphone, sending data to a RaspberryPi with Windows and an FPGA which runs the game that is written in VHDL.
+                          <br/><br/>
+                          Related tags: Windows 10 IoT Core
                         </div>
                       </div>
                     </div>
@@ -712,7 +716,7 @@
                       <div class="card-header" id="heading-win32">
                         <h5 class="mb-0">
                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-win32" aria-expanded="true" aria-controls="collapse-win32">
-                            Windows Dev / Shell Extensions
+                            Windows Dev
                           </button>
                         </h5>
                       </div>
