--- a/cv/index.html
+++ b/cv/index.html
@@ -534,7 +534,7 @@
                       <div class="card-header" id="heading-iot">
                         <h5 class="mb-0">
                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-iot" aria-expanded="true" aria-controls="collapse-iot">
-                            IoT / RaspPi / Arduino
+                            IoT / Raspi / Arduino
                           </button>
                         </h5>
                       </div>
