--- a/cv/index.html
+++ b/cv/index.html
@@ -411,7 +411,7 @@
                         <h5 class="mb-0">
                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-office-dev" aria-expanded="true"
                             aria-controls="collapse-office-dev">
-                            Microsoft Office Development
+                            Microsoft Office Dev
                           </button>
                         </h5>
                       </div>
