Minor grammatical fixes
I was looking at your site and found some grammatical errors so I tried to fix some of them. If you want me to look more, because im assuming English isn't your first language, I'd be happy to look through it more.

--- a/cv/index.html
+++ b/cv/index.html
@@ -110,10 +110,10 @@
                   <div class="h4 mt-0 title">About</div>
                   <p>Hello! I am Aryan Ebrahimpour. Software Engineer and Designer.</p>
                   <p>
-                    I have commenced programming since middle school and I was interested in this field. Since that time, I've started developing
+                    I began programming in middle school and ever since then I have been interested in this field. I've started developing
                     applications and writing articles in my weblog. I read software and hardware articles and follow Programming
                     languages and technologies documentation to improve my programming and algorithm design skills. I always
-                    endeavor to become a better software engineer and I will never run out of this.
+                    strive to become a better software engineer and I will never stop.
                   </p>
                 </div>
               </div>
@@ -419,7 +419,7 @@
                       <div id="collapse-office-dev" class="collapse" aria-labelledby="heading-office-dev" data-parent="#accordion-office-dev">
                         <div class="card-body">
                           I can create Plug-ins for Microsoft Office products. I've already created an extension for Microsoft Excell that can 
-                          modify a sheet for an easier question importing for Moodle. This project was a part of Sabnaa project.
+                          modify a sheet for easier question importing for Moodle. This project was a part of Sabnaa project.
                         </div>
                       </div>
                     </div>
@@ -586,7 +586,7 @@
                         <div class="card-body">
                           I'm experienced in Threading, Socket Programming and Desktop Programming with Java (JavaFX).
                           Almost in all of our university projects, we were forced to use Java, therefore all my AI projects, PL design projects and Advanced Programming course projects are written in Java.
-                          I'm not a fan of it tho!
+                          I'm not a fan of it though!
                         </div>
                       </div>
                     </div>
@@ -639,7 +639,7 @@
 
                       <div id="collapse-ui-ux" class="collapse" aria-labelledby="heading-ui-ux" data-parent="#accordion-ui-ux">
                         <div class="card-body">
-                          Creating charming user interfaces were always a hobby for me. I love blending Arts with Computers!
+                          Creating charming user interfaces has always been a hobby for me. I love blending art with Computers!
                         </div>
                       </div>
                     </div>
