Remove buttons margin

--- a/cv/index.html
+++ b/cv/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="h2 title">Aryan Ebrahimpour</div>
                 <p class="category text-white">Software Engineer</p>
-                <a class="btn btn-primary smooth-scroll mr-2" href="/cv/media/University Grades.pdf" data-aos="zoom-in"
+                <a class="btn btn-primary smooth-scroll" href="/cv/media/University Grades.pdf" data-aos="zoom-in"
                   data-aos-anchor="data-aos-anchor">Download University Grades</a>
                 <a class="btn btn-primary" target="_blank" href="/cv/media/cv.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download
                   CV
